fixed columns to fit on mobile device screen

--- a/src/styles.css
+++ b/src/styles.css
@@ -46,7 +46,7 @@ a:hover {
   background-position: 95% 80%;
   width: 100%;
   padding: 10px;
-  margin-left: -15px;
+  margin-left: -5px;
   cursor: auto;
 }
 
